[package]
name = "tilemapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.1"
egui = "0.26.1"
log = "0.4.20"
pretty_env_logger = "0.5.0"
egui_extras = { version = "0.26.2", featrues = ["images"] }
winapi = { version = "0.3.9", features = ["winuser"] }
